fix trac #6435 responsive tag spacing

--- a/src/scss/pages/_blog.scss
+++ b/src/scss/pages/_blog.scss
@@ -91,6 +91,8 @@
 
     border: solid 1px $mla-blue;
     border-radius: 3px;
+    display: inline-block;
+    margin-bottom: 3px;
     margin-right: 10px;
     padding: 3px 8px;
     text-decoration: none;
